--- a/about.html
+++ b/about.html
@@ -244,10 +244,10 @@
 </ul>
 
 <h1 id="section-1">业余项目和作品</h1>
-
 <ul>
-  <li><a href="http://bblu.tk/2016-02-18-how-to-python.html">Python脚本集合</a>：编码示例，网络爬虫和一些算法实现。</li>
-  <li><a href="http://bblu.tk/2016-12-13-ortho-project-py.html">Python图像处理</a>：将拍照的圆柱体透视照片转换成正射影像。</li>
+  <li><a href="http://www.bblu.tk/">个人网站</a>: 本站的备份</li>
+  <li><a href="http://bblu.tk/2016-02-18-how-to-python.html">Python集合</a>：编码示例，网络爬虫和一些算法实现。</li>
+  <li><a href="http://bblu.tk/2016-12-13-ortho-project-py.html">Python图像</a>：将拍照的圆柱体透视照片转换成正射影像。</li>
   <li><a href="http://bblu.tk/2013-01-26-shell-pma-code.html">shell 脚本</a>：编写的可以自动代码分析统计入库脚本。</li>
   <li><a href="http://bblu.tk/2015-08-16-php-spider-jijin.html">PHP 网站</a>：PHP开发的家庭财产软件，写了个简单的基金爬虫。</li>
   <li><a href="http://bblu.tk/2016-05-06-leetcode-in-cpp.html">LeetCode</a>：两年前刷leetcode的成果（c++）。</li>
