--- a/about.html
+++ b/about.html
@@ -230,19 +230,17 @@
 
 <ul>
   <li>通用技能：SSH/SCP/vim/shell/github/docker</li>
-  <li>开发语言：C/C++/C#/PHP/python/Java/JS/lisp</li>
+  <li>开发语言：C/C++/C#/PHP/python/Javascript</li>
   <li>三维引擎：wordwind/osg/osgEarth/Delta3D/ogre</li>
-  <li>Web开发：XML/JSON/CSS/HTML/JS/PHP/NodeJS</li>
+  <li>Web开发：JS/PHP/NodeJS/XML/JSON/CSS/HTML</li>
   <li>Web框架：zentaoPHP/Express/leaflet</li>
-  <li>数据库软件：SQLite/sqlServer/Orical/MySQL/PgSQL/PostGIS/MongoDB</li>
-  <li>数据库操作：ORM/View/Trigger/SQL/joinQuery/spatialQuery</li>
-  <li>前端框架和工具：jQuery/VUE/npm/Grunt/webpack</li>
-  <li>测试框架和工具：cppUnit/Macha/SoapUI/Selemum/JMeter</li>
-  <li>版本管理：svn/git/gitLab/Jenkins</li>
-  <li>发布工具：tomcat/Apache/Nginx</li>
-  <li>GIS服务相关：WFS/WMS/投影转换/配准纠正/地理编码</li>
-  <li>行业软件：ArcMap、QGIS、uDig、globalMapper</li>
-  <li>工具软件：Xmind、VP、autoCAD、PS、3dsMax、Word、Excel、Visio</li>
+  <li>数据库软件：SQLite/Orical/MySQL/PgSQL/PostGIS/MongoDB</li>
+  <li>前端框架和工具：VUE/npm/Grunt/webpack</li>
+  <li>测试框架和工具：cppUnit/Macha/SoapUI/postMan</li>
+  <li>版本管理和CI：svn/git/gitLab/Jenkins</li>
+  <li>GIS服务相关：WFS/WMS/投影/配准/地理编码</li>
+  <li>行业软件：ArcMap/QGIS/uDig/globalMapper/gdal</li>
+  <li>工具软件：Xmind/autoCAD/PS/3dsMax</li>
 </ul>
 
 <h1 id="section-1">业余项目和作品</h1>
@@ -267,7 +265,7 @@ https://bblu.github.io/2017-01-17-android-medical-app.html</p>
 
 <h1 id="section-2">软件设计师资格证书</h1>
 <blockquote>
-  <p>2016年在淘宝花11块钱买了本参考书，把习题看了两遍去考试然后就通过了。</p>
+  <p>2016年下半年通过</p>
 </blockquote>
 
         
