--- a/2010-04-03-qt-propertybrowser.html
+++ b/2010-04-03-qt-propertybrowser.html
@@ -432,7 +432,7 @@ project(test_property)</p>
     </h2>
     
     <p class="archive__item-excerpt" itemprop="description">
-  每周一练-计算目标索引。假设给定数组中的两个元素和等于给定值计算这个索引。这道题坑最多等就是C++的了：数组参数传值拷贝，数组长度，返回数组总之是后背发凉。
+  每周一练-计算目标索引。假设给定数组中的两个元素和等于给定值计算这个索引。这道题坑最多等就是C++的了：数组参数传值拷贝，数组长度，返回数组总之是后背发凉。（这个每周一练一开始计划叫每日一练的，当mkdir的时候本着从实际的原则改成了weeklypractice）
 
 
 </p>
