--- a/about.html
+++ b/about.html
@@ -226,7 +226,13 @@
       <section class="page__content" itemprop="text">
         
 <h2 id="profile">profile</h2>
-<p>technology roadmap for 10 years</p>
+<p>technology roadmap for 10 years.</p>
+
+<p>gis专业算是一直专业对口的工作，10年从业经历了gis行业从开始二维栅格迈向三维又到现在的矢量二三维的发展历程，编程语言也从c++到php到现在的node和go。</p>
+
+<p>小公司工作内容比较杂，最早项目开发然后优化引擎做三维平台的工作比较多涉及一些图形算法，然后还有一些数据库和pass平台服务的开发和过程管理以及CI的一些东西。</p>
+
+<p>自学python做一些数据处理的工作，爱好电路和硬件自学linux下的开发，有空玩一玩单片机和树莓派。</p>
 
 <h2 id="section">技能清单</h2>
 
@@ -235,12 +241,10 @@
   <li>开发语言：C/C++/C#/PHP/python/Javascript</li>
   <li>三维引擎：wordwind/osg/osgEarth/Delta3D/ogre</li>
   <li>Web开发：JS/PHP/NodeJS/XML/JSON/CSS/HTML</li>
-  <li>Web框架：zentaoPHP/Express/leaflet</li>
-  <li>数据库软件：SQLite/Orical/MySQL/PgSQL/PostGIS/MongoDB</li>
-  <li>前端框架和工具：VUE/npm/Grunt/webpack</li>
-  <li>测试框架和工具：cppUnit/Macha/SoapUI/postMan</li>
-  <li>版本管理和CI：svn/git/gitLab/Jenkins</li>
-  <li>GIS服务相关：WFS/WMS/投影/配准/地理编码</li>
+  <li>Web框架：zentaoPHP/Express/leaflet/mapbox</li>
+  <li>数据库：SQLite/Orical/MySQL/PgSQL/PostGIS/MongoDB</li>
+  <li>版本管理：svn/git/gitLab/Jenkins</li>
+  <li>GIS服务：WFS/WMS/投影/配准/地理编码和矢量切块</li>
   <li>行业软件：ArcMap/QGIS/uDig/globalMapper/gdal</li>
   <li>工具软件：Xmind/autoCAD/PS/3dsMax</li>
 </ul>
